feat: Introduce comprehensive file I/O exercises and modern file handling techniques
- Added `FileWriterExercise` to demonstrate traditional file I/O with examples using `FileWriter`, `BufferedWriter`, and `PrintWriter`.
- Created `ModernFileIOExercise` showcasing modern `java.nio.file` API for cleaner, efficient file operations.
- Updated slides with detailed code examples, concepts, and practical applications for both traditional and modern file handling approaches.
- Enhanced formatting in slides to ensure clarity and consistency in file I/O demonstrations.